# ShipMCP

./: .gitignore  Dockerfile  README.md  pyproject.toml
.reasonix/: desktop-topic-created-at.json  desktop-topic-title-sources.json  desktop-topic-titles.json
ship_mcp/: __init__.py  server.py
ship_mcp/data/: categories.py  repository.py  ship_terms.db  terms.py  terms_imo.py  terms_shipyard.py
tests/: test_repository.py  test_server_tools.py
